--- a/decidim-admin_extended/config/locales/pl.yml
+++ b/decidim-admin_extended/config/locales/pl.yml
@@ -31,6 +31,7 @@ pl:
       menu:
         informations: Aktualności
       titles:
+        edit_organization_appearance: Edytuj wygląd strony głównej
         informations: Aktualności
       informations:
         no_informations: Brak danych
