--- a/config/locales/pl-PL-blogs.yml
+++ b/config/locales/pl-PL-blogs.yml
@@ -40,6 +40,11 @@ pl:
           update:
             invalid: Podczas zapisywania wpisu wystąpiły błędy.
             success: Wpis został pomyślnie zapisany
+      admin_log:
+        post:
+          create: "%{user_name} utworzył(a) %{resource_name} wpis bloga w %{space_name}"
+          delete: "%{user_name} usunął/usunęła %{resource_name} wpis bloga from %{space_name}"
+          update: "%{user_name} zaktualizował(a) %{resource_name} wpis bloga w %{space_name}"
       last_activity:
         new_post_at_html: "<span>Nowy wpis na %{link}</span>"
       models:
