--- a/config/locales/pl-PL-core.yml
+++ b/config/locales/pl-PL-core.yml
@@ -893,7 +893,7 @@ pl:
         publish_with_space: "%{user_name} opublikował(a) %{resource_name} w %{space_name}"
         unknown_action: "%{user_name} wykonał(a) jakąś akcję w %{resource_name}"
         unknown_action_with_space: "%{user_name} wykonał(a) jakąś akcję w %{resource_name} w %{space_name}"
-        unpublish_with_space: "%{user_name} ukrył %{resource_name} z %{space_name}"
+        unpublish_with_space: "%{user_name} ukrył(a) %{resource_name} z %{space_name}"
         update: "%{user_name} zaktualizował(a) %{resource_name}"
         update_permissions_with_space: "%{user_name} zaktualizował(a) uprawnienia %{resource_name} w %{space_name}"
         update_with_space: "%{user_name} zaktualizował(a) %{resource_name} w %{space_name}"
