update meeting show

--- a/decidim-module-meetings_extended/config/locales/pl.yml
+++ b/decidim-module-meetings_extended/config/locales/pl.yml
@@ -23,6 +23,10 @@ pl:
             in_person: Osobiście
             online: Online
     components:
+      meetings:
+        actions:
+          comment: Komentarze
+          join: Dołącz
       meetings_extended:
         name: Spotkania
     meetings:
