--- a/config/locales/pl-PL-comments.yml
+++ b/config/locales/pl-PL-comments.yml
@@ -62,7 +62,9 @@ pl:
             offensive: Promuje rasizm, seksizm, nienawiść, ataki osobiste, groźby śmierci, groźby samobójcze jakąkolwiek formę mowy nienawiści.
             spam: Zawiera clickbaity, reklamy, oszustwa lub skrypty botów.
           title: Zgłoś niewłaściwą treść
-        show_replies: Pokaż %{replies_count} odpowiedzi
+        show_replies:
+          one: Pokaż odpowiedź
+          other: Pokaż %{count} odpowiedzi
         single_comment_link_title: Pobierz link do pojedynczego komentarza
       comment_order_selector:
         order:
