--- a/config/locales/pl-PL-proposals.yml
+++ b/config/locales/pl-PL-proposals.yml
@@ -673,8 +673,9 @@ pl:
           filter_by: Filtruj według
           unfold: Rozwiń
         new:
+          add_file: Dodaj plik
+          edit_file: Edytuj plik
           send: Dalej
-          title: Utwórz swój wspólny szkic
         new_collaborative_draft_button:
           new_collaborative_draft: Nowy wspólny szkic
         orders:
