--- a/config/locales/pl-PL-core.yml
+++ b/config/locales/pl-PL-core.yml
@@ -456,7 +456,7 @@ pl:
           newsletter: Chcę otrzymywać okazjonalne newslettery z istotnymi informacjami
           newsletter_title: Zgoda na subskrybcję
           nickname_help: Twój pseudonim w %{organization}
-          password_help: "Minimalna liczba znaków: %{minimun_characters}; nie może być zbyt powszechny (np. 123456) i musi różnić się od Twojego pseudonimu i adresu e-mail."
+          password_help: "Minimalna liczba znaków: %{minimum_characters}; nie może być zbyt powszechny (np. 123456) i musi różnić się od Twojego pseudonimu i adresu e-mail."
           sign_in: Zaloguj się
           sign_up: Zarejestruj się
           sign_up_as:
@@ -1504,8 +1504,8 @@ pl:
         change_your_password: Zmień swoje hasło
         confirm_new_password: Potwierdź nowe hasło
         new_password: Nowe hasło
-        password_help: "Minimalna liczba znaków: %{minimun_characters}; nie może być zbyt powszechny (np. 123456) i musi różnić się od Twojego pseudonimu i adresu e-mail."
-        password_help_admin: "Minimum %{minimun_characters} znaków, nie może być zbyt oczywiste (np. 123456), musi różnić się od Twojego pseudonimu i adresu e-mail oraz musi różnić się od Twoich starych haseł."
+        password_help: "Minimalna liczba znaków: %{minimum_characters}; nie może być zbyt powszechny (np. 123456) i musi różnić się od Twojego pseudonimu i adresu e-mail."
+        password_help_admin: "Minimum %{minimum_characters} znaków, nie może być zbyt oczywiste (np. 123456), musi różnić się od Twojego pseudonimu i adresu e-mail oraz musi różnić się od Twoich starych haseł."
         title: Zmiana hasła
       new:
         forgot_your_password: Zapomniałeś hasła?
