--- a/config/locales/pl-PL-core.yml
+++ b/config/locales/pl-PL-core.yml
@@ -1583,6 +1583,7 @@ pl:
         few: 'Podczas przetwarzania Twojego żądania wystąpiły błędy:'
         many: 'Podczas przetwarzania Twojego żądania wystąpiły błędy:'
         other: 'Podczas przetwarzania Twojego żądania wystąpiły błędy:'
+      password_confirmation_message: 'Potwierdzenie hasła musi być zgodne z polem "Hasło"'
       too_many_marks: używa zbyt wielu kolejnych znaków interpunkcyjnych (np.! i?)
       too_much_caps: używa zbyt dużej liczby wielkich liter (ponad 25% tekstu)
       too_short: jest za krótki (poniżej 15 znaków)
