--- a/decidim-surveys_extended/config/locales/pl.yml
+++ b/decidim-surveys_extended/config/locales/pl.yml
@@ -8,6 +8,7 @@ pl:
       surveys:
         settings:
           global:
+            automatic_question_numbering: Automatyczne numerowanie pytań
             private_survey: Ankieta prywatna
             transparent: Transparenta
     forms:
